Remove GitHub workflows and copilot instructions
Deleted Firebase Hosting workflow files and copilot-instructions.md from .github directory. Updated .gitignore to exclude new debug and GitHub files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,15 @@ build
 /coverage
 /prun_universe_map.tar
 .firebase/hosting.*
+/github
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+firebase-debug.log*
+
 
 # Local env files
 .env.local
