Add runtime environment config support
Introduces public/env-config.template.js and src/utils/env.js to allow runtime configuration of environment variables via a client-exposed JS file. Updates .gitignore to exclude the generated config. Refactors Firebase and SIL Tracking config to use the new runtime environment utility, and injects env-config.js into index.html for client-side access.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ firebase-debug.log*
 .env.test.local
 .env.production.local
 .env.production
+public/env-config.js
+.runtimeconfig.json
 
 # Editor settings
 .idea/
